--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -15,6 +16,50 @@ body {
 #search-box {
   font: inherit;
   padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+  width: 350px;
+  margin: 15 0 15 40;
+}
+
+input:focus {
+  outline-color: aqua;
+}
+
+.country-info {
+  margin-left: 40px;
+}
+
+.country-item {
+  display: flex;
+  align-items: center;
+}
+
+.country-item:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.country-name {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.box {
+  display: flex;
+}
+
+.country-title {
+  font-size: 45;
+  margin-left: 10px;
+}
+
+.country-text {
+  font-size: 20px;
+}
+
+.country-text:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+p span {
+  font-size: 20px;
+  font-weight: bold;
 }
